--- a/coinbase-functions/coinbase-ticker-sink/pom.xml
+++ b/coinbase-functions/coinbase-ticker-sink/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>io.streamnative.data.feeds.realtime</groupId>
         <artifactId>coinbase-functions</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.1</version>
     </parent>
 
     <groupId>io.streamnative.data.feeds.realtime</groupId>
@@ -40,5 +40,44 @@
         </dependency>
 
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>io.fabric8</groupId>
+                <artifactId>docker-maven-plugin</artifactId>
+                <version>0.43.0</version>
+                <configuration>
+                    <images>
+                        <image>
+                            <name>${docker.repo}/${project.artifactId}:${project.version}</name>
+                            <build>
+                                <contextDir>${project.basedir}/src/main/docker</contextDir>
+                                <assemblies>
+                                    <assembly>
+                                        <descriptorRef>artifact</descriptorRef>
+                                    </assembly>
+                                </assemblies>
+                                <tags>
+                                    <tag>latest</tag>
+                                </tags>
+                            </build>
+                        </image>
+                    </images>
+                    <registry>${docker.repo}</registry>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>docker:build</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>build</goal>
+                            <goal>push</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
