--- a/coinbase-flink/pom.xml
+++ b/coinbase-flink/pom.xml
@@ -15,17 +15,18 @@
         <module>coinbase-joins</module>
         <module>coinbase-filters</module>
         <module>coinbase-aggregations</module>
+        <module>trades-moving-average</module>
     </modules>
 
     <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <annotation-api.version>1.3.2</annotation-api.version>
         <connector-pulsar.version>4.1.1</connector-pulsar.version>
         <datafaker.version>1.7.0</datafaker.version>
-        <flink.version>1.18.1</flink.version>
+        <flink.version>1.20.1</flink.version>
         <jackson.version>2.13.4.2</jackson.version>
         <lombok.version>1.18.30</lombok.version>
     </properties>
