--- a/coinbase-flink/trades-moving-average/pom.xml
+++ b/coinbase-flink/trades-moving-average/pom.xml
@@ -2,42 +2,55 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
+    <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>io.streamnative.data.feeds.realtime</groupId>
-        <artifactId>coinbase-functions</artifactId>
-        <version>1.0.1</version>
+        <groupId>io.streamnative</groupId>
+        <artifactId>coinbase-flink</artifactId>
+        <version>0.0.1</version>
     </parent>
 
-    <modelVersion>4.0.0</modelVersion>
+    <artifactId>trades-moving-average</artifactId>
 
-    <artifactId>coinbase-live-feed</artifactId>
-    <name>Coinbase Functions :: Live Feed Source</name>
+    <properties>
+        <docker.repo>localhost:32000</docker.repo>
+    </properties>
 
     <dependencies>
-
         <dependency>
-            <groupId>javax.websocket</groupId>
-            <artifactId>javax.websocket-api</artifactId>
-            <version>1.1</version>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.15.2</version>
         </dependency>
 
         <dependency>
-            <groupId>org.glassfish.tyrus.bundles</groupId>
-            <artifactId>tyrus-standalone-client</artifactId>
-            <version>1.9</version>
+            <groupId>io.streamnative.data.feeds.realtime</groupId>
+            <artifactId>coinbase-datatypes</artifactId>
+            <version>1.0.1</version>
         </dependency>
 
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.11</version>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-json</artifactId>
+            <version>${flink.version}</version>
         </dependency>
 
     </dependencies>
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.4.1</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals><goal>shade</goal></goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!--
             <plugin>
                 <groupId>io.fabric8</groupId>
                 <artifactId>docker-maven-plugin</artifactId>
@@ -72,7 +85,7 @@
                     </execution>
                 </executions>
             </plugin>
+            -->
         </plugins>
     </build>
-
 </project>
