--- a/coinbase-flink/pom.xml
+++ b/coinbase-flink/pom.xml
@@ -19,19 +19,26 @@
     </modules>
 
     <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <annotation-api.version>1.3.2</annotation-api.version>
-        <connector-pulsar.version>4.1.1</connector-pulsar.version>
+        <connector-pulsar.version>4.3.1-rc0</connector-pulsar.version>
         <datafaker.version>1.7.0</datafaker.version>
-        <flink.version>1.19.1</flink.version>
+        <flink.version>1.19.0</flink.version>
         <jackson.version>2.17.2</jackson.version>
         <lombok.version>1.18.30</lombok.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-connector-pulsar</artifactId>
+            <version>4.1.0-1.18</version>
+        </dependency>
+
+        <!--
         <dependency>
             <groupId>io.streamnative.connectors</groupId>
             <artifactId>flink-connector-pulsar</artifactId>
@@ -55,6 +62,7 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        -->
 
         <dependency>
             <groupId>org.apache.flink</groupId>
@@ -112,7 +120,6 @@
                     </annotationProcessorPaths>
                 </configuration>
             </plugin>
-
         </plugins>
     </build>
 
