Added reconnect logic to coinbase live feed connector

--- a/coinbase-functions/coinbase-live-feed/src/main/resources/coinbase-source-config.yaml
+++ b/coinbase-functions/coinbase-live-feed/src/main/resources/coinbase-source-config.yaml
@@ -9,3 +9,5 @@ configs:
     \"channels\": [\"ticker\", \"rfq_matches\", \"auctionfeed\"], 
     \"product_ids\": [ \"ETH-USD\", \"BTC-USD\", \"USDT-USD\", \"SOL-USD\", \"XRP-USD\"
     \ , \"DOGE-USD\", \"ADA-USD\", \"LTC-USD\" ] }"
+    maxReconnectAttempts: "10"
+    reconnectBaseDelayMs: "1000"
