--- a/deployments/k8s/deployment.yaml
+++ b/deployments/k8s/deployment.yaml
@@ -17,6 +17,8 @@ spec:
     \"channels\": [\"ticker\", \"rfq_matches\", \"auctionfeed\"], 
     \"product_ids\": [ \"ETH-USD\", \"BTC-USD\", \"USDT-USD\", \"SOL-USD\", \"XRP-USD\"
     \ , \"DOGE-USD\", \"ADA-USD\", \"LTC-USD\" ] }"
+    maxReconnectAttempts: "10"
+    reconnectBaseDelayMs: "1000"
   output:
     topic: persistent://feeds/realtime/coinbase-livefeed
     typeClassName: java.lang.String
